2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* userprefs.c: Add support for Solaris default log
	files (Lin Ma, #338426).

	* log_repaint.c: Remove NUL character returned by ctime
	from status bar (Lin Ma, #338426).

	* logview.c: Use File instead of Log (Lin Ma, #338426).

	* logrtns.c: Bold the whole log lines and get the corrent
	size in x86_64 and Sparc system (Lin Ma, #338426).

	* loglist.c: Sort files by ascending order (Lin Ma, #338426).

2006-05-28  Sebastien Bacher  <seb128@debian.org>

	* log_repaint.c: (tree_path_find_row): fix the selection offset 
	when copying from a log with several days listed (Closes: #338176)

2006-02-06  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	Codebase clean up patch (based on a patch by Paolo Borelli).

	* logview.h:
	* logview.c (logview_set_font), (logview_copy), (logview_init),
	(logview_window_new): add logview_set_font() for setting the font of
	the logview window; clean up the code.

	* misc.c (widget_set_font): remove this function, as logview_set_font()
	as been added.

	* userprefs.c: massive code clean ups.

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* logview.c: revert the previous commit: the free is needed (thanks
	to Paolo Borelli).

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* logview.c: remove an unnecessary free().

2006-02-03  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* misc.c (widget_set_font): check for NULL font name.

	* logview.c: pass "Monospace 10" as default monospace font name and
	size, in case GConf returns an empty string (closes bug #329704).

2006-01-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* about.c: fix Gman's email address.

2006-01-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-system-log.desktop.in: fix the Category key, by adding ';'
	at the end (closes bug #328584).

2006-01-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* main.c: remove an unnecessary cast.

2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
