@@ -19,8 +19,13 @@
 
     ---------------------------------------------------------------------- */
 
+#include "config.h"
+
+#include <string.h>
+
 #include <gtk/gtk.h>
 #include <glib/gi18n.h>
+
 #include "logview.h"
 #include "logrtns.h"
 #include "log_repaint.h"
