@@ -1,5 +1,9 @@
 2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* log_repaint.c: Fix include of string.h.
+
+2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* userprefs.c: Add support for Solaris default log
 	files (Lin Ma, #338426).
 
